RESOLVED FIXED43016
AX: Safari does not support ARIA mixed checkboxes
https://bugs.webkit.org/show_bug.cgi?id=43016
Summary AX: Safari does not support ARIA mixed checkboxes
chris fleizach
Reported 2010-07-26 16:03:40 PDT
Safari does not return the correct value in AXValue for mixed checkboxes.
Attachments
Patch (8.05 KB, patch)
2010-07-26 16:27 PDT, chris fleizach
darin: review+
chris fleizach
Comment 1 2010-07-26 16:27:57 PDT
chris fleizach
Comment 2 2010-07-26 16:33:58 PDT
Note You need to log in before you can comment on or make changes to this bug.