AX: Safari does not support ARIA mixed checkboxes https://bugs.webkit.org/show_bug.cgi?id=43016

Reviewed by Darin Adler.

WebCore: 

Test: platform/mac/accessibility/mixed-checkbox.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::checkboxOrRadioValue):
* accessibility/AccessibilityObject.h:
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::isNativeCheckboxOrRadio):
(WebCore::AccessibilityRenderObject::checkboxOrRadioValue):
* accessibility/AccessibilityRenderObject.h:
* accessibility/mac/AccessibilityObjectWrapper.mm:
(-[AccessibilityObjectWrapper accessibilityAttributeValue:]):

LayoutTests: 

* platform/mac/accessibility/mixed-checkbox-expected.txt: Added.
* platform/mac/accessibility/mixed-checkbox.html: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@64088 bbb929c8-8fbe-4397-9dbb-9b2b20218538