third_party/WebKit/WebCore/accessibility/AccessibilityObject.cpp
@@ -986,6 +986,8 @@ AccessibilityButtonState AccessibilityObject::checkboxOrRadioValue() const
     const AtomicString& result = getAttribute(aria_checkedAttr);
     if (equalIgnoringCase(result, "true"))
         return ButtonStateOn;
+    if (equalIgnoringCase(result, "mixed"))
+        return ButtonStateMixed;
     
     return ButtonStateOff;
 }
