third_party/WebKit/WebCore/accessibility/AccessibilityObject.h
@@ -214,6 +214,7 @@ enum AccessibilityObjectInclusion {
 enum AccessibilityButtonState {
     ButtonStateOff = 0,
     ButtonStateOn, 
+    ButtonStateMixed,
 };
 
 struct VisiblePositionRange {
