third_party/WebKit/WebCore/accessibility/mac/AccessibilityObjectWrapper.mm
@@ -1525,6 +1525,8 @@ static NSString* roleValueToNSString(AccessibilityRole value)
                 return [NSNumber numberWithInt:0];
             case ButtonStateOn:
                 return [NSNumber numberWithInt:1];
+            case ButtonStateMixed:
+                return [NSNumber numberWithInt:2];
             }
         }
 
